[package]
name = "memoradical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
getrandom = { version = "0.2.6", features = ["js"] }
gloo-storage = "0.2.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
yew = "0.19.3"
