[package]
name = "memoradical"
version = "1.7.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
getrandom = { version = "0.2.6", features = ["js"] }
gloo-console = "0.2.1"
gloo-file = "0.2.1"
gloo-net = "0.2.4"
gloo-storage = "0.2.1"
gloo-timers = "0.2.4"
js-sys = "0.3.57"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
sha2 = "0.10.5"
wasm-bindgen = "= 0.2.87"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = ["Clipboard", "Navigator"] }
yew = "0.19.3"
